--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img id="logo" src="./Images/LOGO.png">
       <nav class="pesquisa">
           <div class="escreve">
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" o>
               <input class="novo" type="search" id="input-buscar-filme" placeholder="Search" aria-label="Search">
               <button class="btn butao" id="btn-buscar-filme" type="submit">Search</button>
             </form>
